--- a/Marcusoft.BDD.WhiteStepHelper.SUT/MainWindow.xaml
+++ b/Marcusoft.BDD.WhiteStepHelper.SUT/MainWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="Marcusoft.BDD.WhiteStepHelper.SUT.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Main" Height="350" Width="525">
+        Title="Main" Height="474" Width="524">
     <Grid>
         <Button Content="Test" Name="btnTest" AutomationProperties.Name="Test button" Height="23" HorizontalAlignment="Left" Margin="12,17,0,0" VerticalAlignment="Top" Width="75" Click="btnTest_Click" />
         <Label Content="Result" Height="28" HorizontalAlignment="Left" Margin="318,12,0,0" Name="lblResult" AutomationProperties.Name="Result textbox label"   VerticalAlignment="Top" Width="124" MouseDoubleClick="lblResult_MouseDoubleClick" />
@@ -14,6 +14,14 @@
             <ComboBoxItem Content="Item 4" />
             <ComboBoxItem Content="Item 5" />
         </ComboBox>
-        <Button Content="Open new dialog" Height="23" HorizontalAlignment="Left" Margin="22,144,0,0" Name="btnNewDialog" AutomationProperties.Name="New dialog button" VerticalAlignment="Top" Width="123" Click="btnNewDialog_Click" />
+        <Button Content="Open new dialog" Height="23" HorizontalAlignment="Left" Margin="12,144,0,0" Name="btnNewDialog" AutomationProperties.Name="New dialog button" VerticalAlignment="Top" Width="123" Click="btnNewDialog_Click" />
+        <TabControl Height="100" HorizontalAlignment="Left" AutomationProperties.Name="Main tabsystem" Margin="12,199,0,0" Name="tabControl1" VerticalAlignment="Top" Width="464">
+            <TabItem Header="Tree" Name="tabTree">
+                <Grid />
+            </TabItem>
+            <TabItem Header="List" Name="tabList">
+                <Grid Height="204" Width="470" />
+            </TabItem>
+        </TabControl>
     </Grid>
 </Window>
